fix spacing

--- a/style.scss
+++ b/style.scss
@@ -83,7 +83,7 @@ header {
 
 .header-lower {
     display: none;
-    
+
     #header-money2 {
         display: none;
     }
@@ -163,7 +163,7 @@ main {
                                 width: 534px;
                                 padding-right: 80px;
                                 padding-left: 8px;
-                                padding-bottom: 40px;
+                                padding-bottom: 0;
                                 margin: 0 auto;
                                 h3 {
                                     font-size: 24px;
